# profile.wearable.platform.core.appfw.app-selector

./: CMakeLists.txt  INSTALL  org.tizen.app-selector.xml.in  project.config
data/: app-selector.edc
data/groups/: popup_custom.edc
include/: app-selector-view.h  app-selector.h
packaging/: org.tizen.app-selector.spec
src/: app-selector-view.c  app-selector.c
